멀티 모듈 수정

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,8 @@ plugins {
 allprojects {
     group = 'org.example.tonutoz'
     version = '1.0-SNAPSHOT'
+    sourceCompatibility = '21'
+    targetCompatibility = '21'
 
     repositories {
         mavenLocal()
@@ -18,41 +20,24 @@ allprojects {
 }
 
 subprojects {
-    apply plugin: 'java-library'
+    apply plugin: 'java'
     apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
 
     dependencies {
-        implementation 'org.springframework.boot:spring-boot-starter'
+        implementation 'org.springframework.boot:spring-boot-starter-web'
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
         compileOnly 'org.projectlombok:lombok'
-        developmentOnly 'org.springframework.boot:spring-boot-devtools'
         annotationProcessor 'org.projectlombok:lombok'
-        testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-        testImplementation platform('org.junit:junit-bom:5.9.1')
+        implementation 'org.apache.commons:commons-lang3'
+        implementation 'org.apache.commons:commons-collections4:4.4'
+
         testImplementation 'org.junit.jupiter:junit-jupiter'
-        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-        implementation 'org.springframework.boot:spring-boot-starter-aop'
-        implementation 'org.springframework.boot:spring-boot-starter-web'
+        testImplementation platform('org.junit:junit-bom:5.9.1')
     }
 
     test {
         useJUnitPlatform()
     }
 }
-
-
-project(':spring-boot-java') { // 컴파일 시 common 로딩
-    dependencies {
-        compileOnly project(':spring-boot-common')
-    }
-}
-
-project(':spring-boot-common') { // common은  bootJar로 패키징 할 필요 없음
-    bootJar { enabled = false }
-    jar { enabled = true }
-}
-
-
-bootJar.enabled = false
