--- a/spring-boot-common/build.gradle
+++ b/spring-boot-common/build.gradle
@@ -1,76 +1,11 @@
-plugins {
-    id 'java-library'
-    id 'maven-publish'
-    id 'org.springframework.boot' version '3.2.2'
-    id 'io.spring.dependency-management' version '1.1.4'
-}
+// 실행가능한 jar로 생성하는 옵션, main이 없는 라이브러리에서는 false로 비활성화함
+// 스프링 부트 2.0 이상이라면 bootRepackage.enabled를 사용해야 함
+bootJar { enabled = false }
 
-group = 'org.example.tonutoz'
-version = '0.0.1-SNAPSHOT'
-
-java {
-    sourceCompatibility = '21'
-}
-
-configurations {
-    compileOnly {
-        extendsFrom annotationProcessor
-    }
-}
-
-repositories {
-    mavenLocal()
-    mavenCentral()
-}
+// 외부에서 의존하기 위한 jar로 생성하는 옵션, main이 없는 라이브러리에서는 true로 비활성화함
+jar { enabled = true }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
-
-task sourceJar(type: Jar) {
-    from sourceSets.main.allJava
-}
-
-
-publishing {
-    publications {
-        maven(MavenPublication) {
-            groupId = 'io.whatap.assignment' // groupId
-            artifactId = 'msa-common'           // artifactId
-            //version = '0.0.1-SNAPSHOT'       // version
-            versionMapping {
-                usage('java-api') {
-                    fromResolutionOf('runtimeClasspath')
-                }
-                usage('java-runtime') {
-                    fromResolutionResult()
-                }
-            }
-            from components.java
-        }
-    }
-    repositories {
-        mavenLocal()
-    }
-}
-
-bootJar {
-    enabled = false
-    processResources.exclude("*.properties");
-    processResources.exclude("*.xml");
-}
-
-jar{
-    enabled = true
-    processResources.exclude("*.properties");
-    processResources.exclude("*.xml");
-}
-
-
-tasks.named('bootBuildImage') {
-    builder = 'paketobuildpacks/builder-jammy-base:latest'
-}
-
-tasks.named('test') {
-    useJUnitPlatform()
-}
-project.tasks.publish.dependsOn bootJar
