--- a/spring-boot-batch/src/main/resources/application.yml
+++ b/spring-boot-batch/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
       max-lifetime: 42000
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
     properties:
       hibernate:
         default_batch_fetch_size: 1000
