--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,4 @@ rootProject.name = 'spring-boot'
 include 'spring-boot-common'
 include 'spring-boot-java'
 include 'spring-boot-batch'
+include 'spring-boot-webflux'
