--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,4 @@ include 'spring-boot-common'
 include 'spring-boot-java'
 include 'spring-boot-batch'
 include 'spring-boot-webflux'
+include 'spring-boot-jpa'
